--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -10,4 +10,9 @@
     -->
     <CopyVsixManifestToOutput>false</CopyVsixManifestToOutput>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="..\Common\GlobalAssemblyInfo.cs" Condition="'$(Language)' == 'C#'" />
+    <Compile Include="..\Common\GlobalAssemblyInfo.vb" Condition="'$(Language)' == 'VB'" />
+  </ItemGroup>
 </Project>
