--- a/eng/imports/Packages.targets
+++ b/eng/imports/Packages.targets
@@ -46,7 +46,7 @@
     <PackageReference Update="Microsoft.VisualStudio.Threading"                                       Version="17.4.16-alpha" />
     <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers"                             Version="17.4.16-alpha" />
     <PackageReference Update="Microsoft.VisualStudio.Utilities"                                       Version="17.4.0-preview-3-32908-042" />
-    <PackageReference Update="Microsoft.VisualStudio.Validation"                                      Version="17.0.64" />
+    <PackageReference Update="Microsoft.VisualStudio.Validation"                                      Version="17.6.4-alpha" />
     <PackageReference Update="Microsoft.VisualStudio.XmlEditor"                                       Version="17.3.32804.24" />
     <PackageReference Update="System.Threading.Tasks.Dataflow"                                        Version="6.0.0" />
     <PackageReference Update="Microsoft.VSDesigner"                                                   Version="17.0.0-preview-2-31223-026" />
