--- a/eng/imports/Packages.targets
+++ b/eng/imports/Packages.targets
@@ -82,15 +82,15 @@
 
     <!-- Roslyn -->
     <PackageReference Update="Microsoft.Net.Compilers.Toolset"                                        Version="4.4.0" />
-    <PackageReference Update="Microsoft.VisualStudio.LanguageServices"                                Version="4.6.0-1.23055.1" />
-    <PackageReference Update="Microsoft.CodeAnalysis"                                                 Version="4.6.0-1.23055.1" />
+    <PackageReference Update="Microsoft.VisualStudio.LanguageServices"                                Version="4.6.0-2.23121.4" />
+    <PackageReference Update="Microsoft.CodeAnalysis"                                                 Version="4.6.0-2.23121.4" />
     <PackageReference Update="Microsoft.VisualStudio.IntegrationTest.Utilities"                       Version="2.6.0-beta1-62113-02" />
     <PackageReference Update="Microsoft.CSharp"                                                       Version="4.7.0" />
-    <PackageReference Update="Microsoft.CodeAnalysis.Common"                                          Version="4.6.0-1.23055.1" />
+    <PackageReference Update="Microsoft.CodeAnalysis.Common"                                          Version="4.6.0-2.23121.4" />
 
     <!-- Analyzers -->
     <PackageReference Update="CSharpIsNullAnalyzer"                                                   Version="0.1.329" />
-    <PackageReference Update="Microsoft.CodeAnalysis.Analyzers"                                       Version="3.3.4-beta1.22464.1" />
+    <PackageReference Update="Microsoft.CodeAnalysis.Analyzers"                                       Version="3.3.4" />
     <PackageReference Update="Microsoft.CodeAnalysis.CSharp.CodeStyle"                                Version="4.4.0-2.final" />
     <PackageReference Update="Microsoft.CodeAnalysis.VisualBasic.CodeStyle"                           Version="4.4.0-2.final" />
     <PackageReference Update="Roslyn.Diagnostics.Analyzers"                                           Version="3.3.4-beta1.22464.1" />
