--- a/nuget.config
+++ b/nuget.config
@@ -8,8 +8,10 @@
     <clear />
     <!-- CPS components including: Microsoft.VisualStudio.ProjectSystem -->
     <add key="vs-impl" value="https://pkgs.dev.azure.com/azure-public/vside/_packaging/vs-impl/nuget/v3/index.json" />
+    <add key="vs-impl-archived" value="https://pkgs.dev.azure.com/azure-public/vside/_packaging/vs-impl-archived/nuget/v3/index.json" />
     <!-- Microsoft.VisualStudio components -->
     <add key="vssdk" value="https://pkgs.dev.azure.com/azure-public/vside/_packaging/vssdk/nuget/v3/index.json" />
+    <add key="vssdk-archived" value="https://pkgs.dev.azure.com/azure-public/vside/_packaging/vssdk-archived/nuget/v3/index.json" />
     <!--
       Various packages including:
         Microsoft.DiaSymReader.Pdb2Pdb
