--- a/eng/pipelines/templates/build-official-release.yml
+++ b/eng/pipelines/templates/build-official-release.yml
@@ -7,31 +7,31 @@ jobs:
   timeoutInMinutes: 90
   steps:
 
-  ###################################################################################################################################################################
-  # SBOM GENERATION
-  # This process occurs above plugin installation so that the Src build does not perform signing.
-  ###################################################################################################################################################################
+  # ###################################################################################################################################################################
+  # # SBOM GENERATION
+  # # This process occurs above plugin installation so that the Src build does not perform signing.
+  # ###################################################################################################################################################################
 
-  # Use a disabled, empty script to display the section header in the pipeline UI.
-  - script:
-    displayName: === SBOM Generation ===
-    condition: false
+  # # Use a disabled, empty script to display the section header in the pipeline UI.
+  # - script:
+  #   displayName: === SBOM Generation ===
+  #   condition: false
 
-  # Only the projects in the 'src' folder are necessary for generating the SBOM.
-  - script: $(Build.SourcesDirectory)/build.cmd /v:normal /p:Configuration=$(BuildConfiguration) /p:CIBuild=true /p:Test=false /p:Pack=false /p:TestProjects=false /p:SetupProjects=false
-    displayName: Build Src Projects
+  # # Only the projects in the 'src' folder are necessary for generating the SBOM.
+  # - script: $(Build.SourcesDirectory)/build.cmd /v:normal /p:Configuration=$(BuildConfiguration) /p:CIBuild=true /p:Test=false /p:Pack=false /p:TestProjects=false /p:SetupProjects=false
+  #   displayName: Build Src Projects
 
-  # The binlog is set to Build.binlog by default when using build.cmd. We rename it so it isn't overridden by the full build.
-  - powershell: Rename-Item -Path '$(Build.SourcesDirectory)/artifacts/$(BuildConfiguration)/log/Build.binlog' -NewName SrcBuild.binlog
-    displayName: Rename Src Binlog
+  # # The binlog is set to Build.binlog by default when using build.cmd. We rename it so it isn't overridden by the full build.
+  # - powershell: Rename-Item -Path '$(Build.SourcesDirectory)/artifacts/$(BuildConfiguration)/log/Build.binlog' -NewName SrcBuild.binlog
+  #   displayName: Rename Src Binlog
 
-  # This task both generates the SBOM files and marks the pipeline as compliant.
-  # The SBOM files are needed prior to the full build, as the full build includes them within the .vsman insertion files as part of the SwixBuild (.vsmanproj) process.
-  - task: ManifestGeneratorTask@0
-    displayName: Generate SBOM
-    inputs:
-      BuildDropPath: $(Build.SourcesDirectory)/artifacts/$(BuildConfiguration)/bin/Dlls
-      ManifestDirPath: $(Build.SourcesDirectory)/artifacts/$(BuildConfiguration)/bin
+  # # This task both generates the SBOM files and marks the pipeline as compliant.
+  # # The SBOM files are needed prior to the full build, as the full build includes them within the .vsman insertion files as part of the SwixBuild (.vsmanproj) process.
+  # - task: ManifestGeneratorTask@0
+  #   displayName: Generate SBOM
+  #   inputs:
+  #     BuildDropPath: $(Build.SourcesDirectory)/artifacts/$(BuildConfiguration)/bin/Dlls
+  #     ManifestDirPath: $(Build.SourcesDirectory)/artifacts/$(BuildConfiguration)/bin
 
   ###################################################################################################################################################################
   # PLUGIN INSTALLATION
@@ -58,9 +58,13 @@ jobs:
     # This is not a necessary task for the build to be successful.
     continueOnError: true
 
-  # Necessary for building the .swixproj (VSIX package) and .vsmanproj (VS Insertion) projects.
-  - task: MicroBuildSwixPlugin@4
-    displayName: Install Swix Plugin
+  # https://dev.azure.com/devdiv/DevDiv/_wiki/wikis/DevDiv.wiki/29786/Common-setup-authoring-recommendations?anchor=including-sbom-support
+  - task: MicroBuildSbomPlugin@1
+    displayName: Install SBOM Plugin
+
+  # # Necessary for building the .swixproj (VSIX package) and .vsmanproj (VS Insertion) projects.
+  # - task: MicroBuildSwixPlugin@4
+  #   displayName: Install Swix Plugin
 
   # This requires the OptimizationInputs via the 'Publish OptimizationInputs drop' step in the release pipeline.
   # To generate ProfilingInputs for the first time, set this input: ShouldSkipOptimize: true
