Added the SWiX plugin right before MicroBuildBuildVSBootstrapper task, since it is required for it.

--- a/eng/pipelines/templates/build-official-release.yml
+++ b/eng/pipelines/templates/build-official-release.yml
@@ -120,6 +120,10 @@ jobs:
     # Name is required to reference the variables created within this build step in other stages.
     name: SetVisualStudioMinimumVersionVariable
 
+  # Required for the MicroBuildBuildVSBootstrapper task. See description above that task for details.
+  - task: MicroBuildSwixPlugin@4
+    displayName: Install Swix Plugin
+
   # Creates the VS bootstrapper information based on the build's .vsman file.
   # This bootstrapper information is only used for OptProf currently.
   # Since this data will be output with rest of our insertion files, we produce this data now and publish it in the build artifacts.
